fix: Replace deprecated and scheduled-for-removal APIs
- Replaced deprecated TextFieldWithBrowseButton.addBrowseFolderListener()
- Replaced deprecated FileChooserDescriptorFactory.createSingleFileDescriptor()
- Replaced deprecated UIUtil.isUnderDarcula() with JBColor.isBright()
- Replaced deprecated URL(String) constructor with URI API
- Replaced deprecated Disposer.isDisposed() with manual disposal tracking
- Fixed non-extendable API violation (CheckedDisposable)
- Added @SuppressWarnings for intentional experimental API usage
- Bumped version to 1.0.3